--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             for past 10 years
           </div>
           <a
-            href=""
+            href="./img/Manoj-Resume.pdf"
+            download
             data-aos="fade-right"
             data-aos-delay="2000"
             data-aos-duration="1000"
