--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         height: 25px;
         border: 1px solid var(--gray);
         border-radius: 4px;
+        background-color: var(--white);
       }
       .main .item.success .popular-parent {
         display: flex;
