--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         font-size: 10px;
         font-weight: 500;
       }
+      .main .item.success table tbody th{
+        text-align: right;
+      }
       .main .item.success table th,
       .main .item.success table td {
         padding: 2px;
